Replaced bootstrap.js with the minified version Also fixed bu that clouds were expanding the window infinitely, fixed by addding overflow-x: hidden
Also reworded Front-end section

Removed references to 'dot-row' as its nonexistant and the template designer must have forgotten it

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ ul#menu-main > li > a:hover {
 	background: no-repeat center center fixed;
 	background-size: cover;
 	box-sizing: border-box;
-	overflow-x: hiden;
+	overflow-x: hidden;
 }
 
 .cloud {
@@ -770,7 +770,6 @@ article.post {
 article .inside {
 	margin: 18px 24px 24px;
 	padding-top: 1em;
-	background: url("../img/dot-row-2.png") repeat-x scroll 0 0 transparent !important;
 }
 .post-date {
 	color: #A5A5A2;
@@ -930,7 +929,6 @@ hr.featurette-divider {
 	margin: 3em 0;
 	border-width: 0;
 	height: 9px;
-	background: url("../img/dot-row-3-lt.png") repeat-x;
 }
 /* ----------------------------------------------------------------------------------------------------------
 06 Footer ------------------------------------------------------------
